Release Note

* 12/16/2014
  * checking mutable before preparing tasks
  * enabled consistency check for chained prod tasks

* 12/15/2014
  * fixed getTasksToExecCommand_JEDI for recovery from pending
  * added reqID to JobSpec
  * setting lifetime to panda/user datasets using rucio api
  * introduced seq_number
  * added support for offset of seq_number

* 12/12/2014
  * added junk file cleaner in AtlasPP
  * improved AtlasTS to open output/log datasets

* 12/10/2014
  * to rescue random_seed
  * fixed ddo check in AtlasTR

* 12/9/2014
  * added some debug messages in insertFilesForDataset_JEDI

* 12/5/2014
  * using t1Weight=0 when undefined
  * increased threshold for fax overflow to 0.5 

* 12/4/2014
  * changed AtlasProdJobBroker to send scouts to T1
  * changed AtlasProdJobBroker to count # of jobs regardless of priorities
  * fixed for ddo:

* 12/3/2014
  * using old=True for replica lookup
  * using nEventsPerFile when rucio gives nevents=None

* 12/2/2014
  * added debug messages to AtlasDDM

* 12/1/2014
  * setting ddmBackEnd for ATLAS tasks

* 11/27/2014
  * set frozenTime for pending in Refiner

* 11/26/2014
  * fixed setSplitRule for -
  * using frozenTime for pending
  * added getOldBuildFileSpec
  * checking attribute lengths before registering tasks

* 11/25/2014
  * added unlockTasks
  * added maxAttemptES
  * using merge scout attributes    

* 11/24/2014
  * added pauseTask and resumeTask
  * unthrottling to generate merge jobs

* 11/19/2014
  * fixed AtlasDDM for analysis+rucio
  * skipping setOwner for rucio
  * limitting nRecords with event-splitting in insertFiles
  * using pid to lock in CF

* 11/18/2014
  * fixed AtlasDDM for DQDatasetExistsException
  * change to avoid contention in insertFilesForDataset_JEDI

* 11/17/2014
  * changed JG to (un)set lockedTime
  * changed AtlasProdJobThr to send logging messages 
  * improved throttling in AtlasProdJobThr

* 11/14/2014
  * changed AtlasAnalJB to check core matching