@@ -1,6 +1,8 @@
 Release Note
 
 * 12/16/2014
+  * added more debug messages for reassignTask
+  * setting job.attemptNr=max(file.attemptNr)
   * checking mutable before preparing tasks
   * enabled consistency check for chained prod tasks
 
